changed api call url for coin data and modified code

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,8 @@
 .performance-bar {
     background-image: linear-gradient(to right, #FF4A45, #FD8D0B, #f3ce8a, #21E963);
 }
+
+.scroll-bar::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
